--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.47",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.9",
+		"tailwindcss": "^3.4.14",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@zxing/library": "^0.21.3",
+		"dexie": "^4.0.9",
+		"svelte-i18n": "^4.0.1"
 	}
 }
