--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,18 +2,14 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ['main']
-  
-  # Allows you to run this workflow manually from the Actions tab
+    branches: ["main"]
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -23,18 +19,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          
+          node-version: "20"
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
           run_install: false
-          
+
       - name: Get pnpm store directory
         shell: bash
         run: |
@@ -51,9 +47,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Sync SvelteKit types
+        run: pnpm svelte-kit sync
+
       - name: Build
+        env:
+          NODE_ENV: production
         run: pnpm run build
-        
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
