--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "vite": "^5.0.3",
+    "esm-env": "^1.0.0"
   },
   "dependencies": {
     "@zxing/library": "^0.21.3",
