--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@types/qrcode": "^1.5.5",
     "autoprefixer": "^10.4.20",
+    "esm-env": "^1.0.0",
     "postcss": "^8.4.47",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "esm-env": "^1.0.0"
+    "vite": "^5.0.3"
   },
   "dependencies": {
     "@zxing/library": "^0.21.3",
     "dexie": "^4.0.9",
+    "qrcode": "^1.5.4",
     "svelte-i18n": "^4.0.1"
   }
 }
